<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2016.dmartin.appdivises.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroToDollar"
        android:id="@+id/actualCurrency"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="95dp"
        android:id="@+id/first" />

    <TextView
        android:text="@string/dollar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="189dp"
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/value"
        android:layout_below="@+id/first"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchCurrency"
        android:checked="false"
        android:text="@string/switchText"
        android:layout_above="@+id/value"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalculate"
        android:layout_alignTop="@+id/switchCurrency"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_below="@+id/second"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="false" />

</RelativeLayout>
